[gd_scene load_steps=7 format=3 uid="uid://5ju7ih768ysd"]

[ext_resource type="Script" uid="uid://b2cf035nd4pj7" path="res://Scripts/UI/TopPanel/Components/settings_script.gd" id="1_j2o6a"]
[ext_resource type="Script" uid="uid://181yhrus3jhb" path="res://Scripts/UI/Others/Spinboxes.gd" id="2_s0wg0"]
[ext_resource type="Texture2D" uid="uid://upxotcsbnfdk" path="res://UI/Assets/slider.png" id="3_qasrd"]
[ext_resource type="Script" uid="uid://caf875hofgogu" path="res://Scripts/UI/FormattedLocalizedLabel.gd" id="3_s0wg0"]
[ext_resource type="Texture2D" uid="uid://x1nc07bigmj1" path="res://UI/Assets/ZoomResetButton.png" id="4_fsnh4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6iakd"]

[node name="InputsPopup" type="Window"]
auto_translate_mode = 1
transparent_bg = true
gui_snap_controls_to_pixels = false
initial_position = 4
size = Vector2i(500, 600)
transient = true
exclusive = true

[node name="SettingsScript" type="Node" parent="."]
script = ExtResource("1_j2o6a")

[node name="SettingVbox" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 596.0

[node name="SettingsTab" type="TabContainer" parent="SettingVbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/side_margin = 1
current_tab = 1

[node name="Model Settings" type="ScrollContainer" parent="SettingVbox/SettingsTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingVbox/SettingsTab/Model Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(428, 0)
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="InputCheckButton" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
tooltip_text = "TR_DETECT_HOTKEYS_TOOLTIP"
button_pressed = true
text = "TR_DETECT_HOTKEYS"

[node name="AntiAlCheck" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
button_pressed = true
text = "TR_ANTI_ALIASING"

[node name="AutoLoadCheck" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "TR_AUTO_LOAD_MODEL"

[node name="DeltaTimeCheck" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TR_USE_DELTA_TIME_TOOLTIP"
text = "TR_USE_DELTA_TIME"
autowrap_mode = 3

[node name="HBox2" type="HBoxContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveOnExitCheck" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "TR_SAVE_ON_EXIT"

[node name="Label" type="Label" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "TR_SAVE_ON_EXIT_NOTE"
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AutoSaveCheck" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "TR_AUTO_SAVE"

[node name="AutoSaveSpin" type="SpinBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
suffix = "min."
script = ExtResource("2_s0wg0")

[node name="HBoxContainer" type="HBoxContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxFPSLabel" type="Label" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
text = "{0} : "
script = ExtResource("3_s0wg0")
localizations = Array[String](["TR_MAX_FPS"])

[node name="MaxFPSlider" type="HSlider" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 8.0
max_value = 241.0
value = 241.0

[node name="Sp3" type="HSeparator" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "TR_FOLLOW_MOUSE_SCREEN_LABEL"

[node name="SelectedScreen" type="OptionButton" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OutOfBounds" type="CheckBox" parent="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "If a screen is selected and the cursor is out of it. The mouse is no longer tracked."
text = "Snap Out of Bounds"

[node name="Audio" type="ScrollContainer" parent="SettingVbox/SettingsTab"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingVbox/SettingsTab/Audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="SettingVbox/SettingsTab/Audio/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="GridContainer2" type="GridContainer" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 10
columns = 2
metadata/_edit_use_anchors_ = true

[node name="VolumeLabel" type="Label" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 20
text = "TR_VOLUME"

[node name="VolumeBar" type="ProgressBar" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_value = 1.0
step = 0.0

[node name="VolumeSlider" type="HSlider" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/VolumeBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_qasrd")
theme_override_icons/grabber_highlight = ExtResource("3_qasrd")
theme_override_icons/grabber_disabled = ExtResource("3_qasrd")
theme_override_styles/slider = SubResource("StyleBoxEmpty_6iakd")
max_value = 1.0
step = 0.01
value = 0.1

[node name="DelayLabel" type="Label" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 20
text = "TR_DELAY"

[node name="DelayBar" type="ProgressBar" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_value = 1.0

[node name="DelaySlider" type="HSlider" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/DelayBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_qasrd")
theme_override_icons/grabber_highlight = ExtResource("3_qasrd")
theme_override_icons/grabber_disabled = ExtResource("3_qasrd")
theme_override_styles/slider = SubResource("StyleBoxEmpty_6iakd")
max_value = 1.0
step = 0.01
value = 0.1

[node name="SensitivityLabel" type="Label" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 20
text = "TR_VOLUME_SENSITIVITY"

[node name="SensitivityBar" type="ProgressBar" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="SensitivitySlider" type="HSlider" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/SensitivityBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_qasrd")
theme_override_icons/grabber_highlight = ExtResource("3_qasrd")
theme_override_icons/grabber_disabled = ExtResource("3_qasrd")
theme_override_styles/slider = SubResource("StyleBoxEmpty_6iakd")
min_value = 1.0
max_value = 10.0
step = 0.01
value = 1.0

[node name="Sp2" type="HSeparator" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 7

[node name="MicLabel" type="Label" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "TR_MICROPHONE_LABEL"

[node name="MicroPhoneMenu" type="OptionButton" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17
text_overrun_behavior = 3

[node name="ResetMicButton" type="Button" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Update Mic list"
button_mask = 7
icon = ExtResource("4_fsnh4")
icon_alignment = 1
expand_icon = true

[node name="FixMicDelay" type="Button" parent="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(262, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Only toggle this on if you are experiencing
a significant delay when the microphone
is picking up sound."
focus_mode = 0
text = "Restart Mic"
alignment = 0

[node name="Import Settings" type="ScrollContainer" parent="SettingVbox/SettingsTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Margin" type="MarginContainer" parent="SettingVbox/SettingsTab/Import Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="SettingVbox/SettingsTab/Import Settings/Margin"]
layout_mode = 2

[node name="ImportTrim" type="CheckBox" parent="SettingVbox/SettingsTab/Import Settings/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(262, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Automatically crop away any empty space
surrounding an image when the image is opened."
text = "Crop Images to Content"

[node name="KeepOldTrimData" type="CheckBox" parent="SettingVbox/SettingsTab/Import Settings/Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(262, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keeps a save of the Sprites before trimming. If toggled off, the file will only save the trimmed Sprites."
button_pressed = true
text = "Keep Data Before Trim"

[node name="Remix Settings" type="ScrollContainer" parent="SettingVbox/SettingsTab"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Margin" type="MarginContainer" parent="SettingVbox/SettingsTab/Remix Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="SettingVbox/SettingsTab/Remix Settings/Margin"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "TR_UI_SCALE_LABEL"

[node name="UIScalingSpinBox" type="SpinBox" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="UIScalingSlider" type="HSlider" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.5
max_value = 2.0
step = 0.001
value = 1.0

[node name="FloatyPanning" type="CheckBox" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "When turned on panning in the editor
will be smooth instead of snappy."
focus_mode = 0
text = "Floaty Panning"

[node name="Sp2" type="HSeparator" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Grid" type="GridContainer" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox"]
layout_mode = 2
columns = 2

[node name="CustomCursorEditor" type="CheckBox" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Fancy Cursor in Editor"

[node name="SelectCursorButton" type="Button" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select a custom image for the cursor.
The image should be smaller than 256x256.
Sizes larger than 128x128 may cause rendering issues."
focus_mode = 0
text = "Select Custom Cursor"

[node name="SelectCursor" type="FileDialog" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/SelectCursorButton"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg")
use_native_dialog = true

[node name="CustomCursorPreview" type="CheckBox" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Fancy Cursor in Preview"

[node name="RemoveCustomCursor" type="Button" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid"]
layout_mode = 2
tooltip_text = "Remove the custom cursor image and use the default cursor."
focus_mode = 0
text = "Remove Custom Cursor"

[node name="UseThreads" type="CheckBox" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Use multi-threading for actions like saving and loading."
text = "Use Threads"

[node name="LanguageContainer" type="HBoxContainer" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "TR_LANGUAGE_LABEL"

[node name="LanguageOptions" type="OptionButton" parent="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/LanguageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Automatic"
popup/item_0/id = 0
popup/item_1/text = "English (US)"
popup/item_1/id = 1

[node name="Grid2" type="GridContainer" parent="SettingVbox"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="ThemeLabel" type="Label" parent="SettingVbox/Grid2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 20
text = "UI Theme : "
vertical_alignment = 2
max_lines_visible = 5

[node name="UIThemeButton" type="OptionButton" parent="SettingVbox/Grid2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
item_count = 8
popup/item_0/text = "Purple"
popup/item_0/id = 0
popup/item_1/text = "Blue"
popup/item_1/id = 1
popup/item_2/text = "Orange"
popup/item_2/id = 2
popup/item_3/text = "White"
popup/item_3/id = 3
popup/item_4/text = "Dark"
popup/item_4/id = 4
popup/item_5/text = "Green"
popup/item_5/id = 5
popup/item_6/text = "Funky"
popup/item_6/id = 6
popup/item_7/text = "Frutiger Aero"
popup/item_7/id = 7

[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer/InputCheckButton" to="SettingsScript" method="_on_input_check_button_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer/AntiAlCheck" to="SettingsScript" method="_on_anti_al_check_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer/AutoLoadCheck" to="SettingsScript" method="_on_auto_load_check_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/GridContainer/DeltaTimeCheck" to="SettingsScript" method="_on_delta_time_check_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox2/SaveOnExitCheck" to="SettingsScript" method="_on_save_on_exit_check_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox/AutoSaveCheck" to="SettingsScript" method="_on_auto_save_check_toggled"]
[connection signal="value_changed" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBox/AutoSaveSpin" to="SettingsScript" method="_on_auto_save_spin_value_changed"]
[connection signal="drag_ended" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer/MaxFPSlider" to="SettingsScript" method="_on_max_fp_slider_drag_ended"]
[connection signal="value_changed" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer/MaxFPSlider" to="SettingsScript" method="_on_max_fp_slider_value_changed"]
[connection signal="item_selected" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/HBoxContainer2/SelectedScreen" to="SettingsScript" method="_on_selected_screen_item_selected"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Model Settings/MarginContainer/VBoxContainer/OutOfBounds" to="SettingsScript" method="_on_out_of_bounds_toggled"]
[connection signal="drag_ended" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/VolumeBar/VolumeSlider" to="SettingsScript" method="_on_volume_slider_drag_ended"]
[connection signal="drag_ended" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/DelayBar/DelaySlider" to="SettingsScript" method="_on_delay_slider_drag_ended"]
[connection signal="drag_ended" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/SensitivityBar/SensitivitySlider" to="SettingsScript" method="_on_sensitivity_slider_drag_ended"]
[connection signal="value_changed" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/GridContainer2/SensitivityBar/SensitivitySlider" to="SettingsScript" method="_on_sensitivity_slider_value_changed"]
[connection signal="pressed" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/HBoxContainer/ResetMicButton" to="SettingsScript" method="_on_reset_mic_button_pressed"]
[connection signal="pressed" from="SettingVbox/SettingsTab/Audio/MarginContainer/VBoxContainer/FixMicDelay" to="SettingsScript" method="_on_fix_mic_delay_pressed"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Import Settings/Margin/VBox/ImportTrim" to="SettingsScript" method="_on_import_trim_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Import Settings/Margin/VBox/KeepOldTrimData" to="SettingsScript" method="_on_keep_old_trim_data_toggled"]
[connection signal="value_changed" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/HBoxContainer/UIScalingSpinBox" to="SettingsScript" method="_on_ui_scaling_spin_box_value_changed"]
[connection signal="value_changed" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/HBoxContainer/UIScalingSlider" to="SettingsScript" method="_on_ui_scaling_slider_value_changed"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/FloatyPanning" to="SettingsScript" method="_on_floaty_panning_toggled"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/CustomCursorEditor" to="SettingsScript" method="_on_custom_cursor_editor_toggled"]
[connection signal="pressed" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/SelectCursorButton" to="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/SelectCursorButton/SelectCursor" method="popup_centered"]
[connection signal="file_selected" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/SelectCursorButton/SelectCursor" to="SettingsScript" method="_on_select_cursor_file_selected"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/CustomCursorPreview" to="SettingsScript" method="_on_custom_cursor_preview_toggled"]
[connection signal="pressed" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/RemoveCustomCursor" to="SettingsScript" method="_on_remove_custom_cursor_pressed"]
[connection signal="toggled" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/Grid/UseThreads" to="SettingsScript" method="_on_use_threads_toggled"]
[connection signal="item_selected" from="SettingVbox/SettingsTab/Remix Settings/Margin/VBox/LanguageContainer/LanguageOptions" to="SettingsScript" method="_on_remix_language_set"]
